# player

./: .gitignore  CMakeLists.txt  README.md  icons.qrc  package-lock.json  package.json
debug/: CMakeCache.txt  Makefile  checkbox_state.json  cmake_install.cmake  mediaPlayer.cbp  table_data.json
debug/.cmake/api/v1/reply/: cache-v2-c53059b8ea05c375086b.json  cmakeFiles-v1-9bf77499161f36f3d078.json  codemodel-v2-0106f2bf658196ac1f2c.json  directory-.-Debug-1382dd29e924682b9f72.json  index-2025-05-03T09-50-03-0846.json  target-mediaPlayer-Debug-f3f01c8d9c689b62fa02.json  target-mediaPlayer_autogen-Debug-a81a6e95f801c6f3bc65.json
debug/mediaPlayer_autogen/: moc_predefs.h  mocs_compilation.cpp
debug/mediaPlayer_autogen/PRMOGMWJPH/: moc_decode.cpp  moc_glwidget.cpp  moc_player.cpp  moc_sumTester.cpp
debug/mediaPlayer_autogen/YPKJ5OE7LN/: moc_aboutdialog.cpp  moc_dialog.cpp  moc_historyitem.cpp  moc_mainwindow.cpp  moc_mylabel.cpp  moc_pythonworker.cpp  moc_recommend.cpp  moc_settingsdialog.cpp  moc_summary.cpp  moc_systemdialog.cpp
debug/mediaPlayer_autogen/include/: ui_aboutdialog.h  ui_dialog.h  ui_mainwindow.h  ui_settingsdialog.h  ui_summary.h  ui_systemdialog.h
docs/: feature.md  problemset.md  readme.md
history/: history_records.csv
include/: tool.h
src/: App.vue  Detail-analyse.py  Quick-analyse.py  main.cpp  main.js
src/core/: decode.cpp  decode.h  glwidget.h  player.cpp  player.h  sumTester.h
src/router/: index.js
src/ui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  dialog.cpp  dialog.h  dialog.ui  historyitem.cpp  historyitem.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mylabel.cpp  mylabel.h  pythonworker.cpp  pythonworker.h  recommend.cpp  recommend.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  summary.cpp  summary.h  summary.ui  systemdialog.cpp  systemdialog.h  systemdialog.ui
src/views/: AboutView.vue  BookTest.vue  CarDetail.vue  DriverManagement.vue  GuestManagement.vue  HomeView.vue  MoneyManagement.vue  OrderCenter.vue  RentDetail.vue  ReturnDetail.vue  VehicleManagement.vue  addCar.vue  addDriver.vue  addGuest.vue  updateDriver.vue  updateGuest.vue
web/csv/: recommend_list.csv  search_result.csv  watch_record.csv
web/py/: QT_getBV.py  example.py  order_searchselect.txt  order_searchwords.txt
